test/parserTest/pass/test15.ic
class SimpleVarUse {
	void myMethod () {
		int declaredVar = 0;
		int usingVar = declaredVar + 1;
	}
}