test/parserTest/fail/test16.ic
class MissingSemicolon {
	void main () {
		int x = 0
	}
}